syntax = "proto3";
package canine_chain.storage;

option go_package = "github.com/jackalLabs/canine-chain/x/storage/types";

message Strays {
  string cid = 1;
  string fid = 2;
  string signee = 3;
  string filesize = 4;
  string merkle = 5;
  int64 end = 6;
}

message StrayV2 {
  string cid = 1;
  string fid = 2;
  string signer = 3;
  int64 file_size = 4;
  string merkle = 5;
  int64 end = 6;
  int64 deal_type = 7;
}